# gandalf_bot

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Justfile  README.md  config.example.json  deno.jsonc  docker_start.sh  fly.toml  gandalf_bot.service  http_testing.ts  justfile  loadRedis.ts  loadRedisWithConfig.ts  main.ts  mix.exs  pyproject.toml  run.py  writeDataToRedis.ts
.github/workflows/: ci.yml
config/: config.exs  test.exs
gandalf_bot/: __init__.py  bot.py  config.py  dice.py  message_util.py  quotes.py
lib/: bot.ex  bot_config.ex  commands.ex  dice.ex  gandalf_discord_bot.ex  message_check.ex  quotes.ex  rng.ex  roles.ex  scheduled.ex  word_list.ex
lib/message_check/: incoherent.ex  listen.ex
lib/util/: message.ex  rng.ex  screenshots.ex  words.ex
src/: _deps.ts  birthdaysWorker.ts  blessYou.ts  bookReminderWorker.ts  bot.ts  commands.rs  commands.ts  config.rs  config.ts  configWorker.ts  dateUtil.ts  db.ts  deps.ts  event_handlers.rs  fires.rs  framed.ts  gross.ts  guessingGames.ts  heyListen.ts  main.rs  minecraftOnlineWorker.ts  minecraftWorker.ts  mod.ts  openai.rs  quotes.rs  quotes.ts  reactions.ts  slashCommands.ts  static.ts  tradle.ts  util.ts  valheim.ts
src/event_handlers/: bless_you.rs  guessing_games.rs  laughing.rs  mod.rs  respond.rs  roles.rs
test/: bot_config_test.exs  dice_test.exs  message_check_test.exs  quotes_test.exs  word_list_test.exs
test/message_check/: incoherent_test.exs  listen_test.exs  rng_test.exs
test/util/: words_test.exs
tests/: _test_deps.js  blessYou.test.js  commands.test.js  commands.test.ts  config.test.js  framed.test.js  gross.test.js  guessingGames.test.js  heyListen.test.js  quotes.test.js  reactions.test.js  test_bot.py  test_config.py  test_deps.js  test_deps.ts  test_dice.py  test_gandalf_bot.py  test_message_util.py  test_quotes.py  tradle.test.js
