[package]
name = "gandalf_bot"
version = "0.1.0"
edition = "2021"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/gandalf_bot"
repository = "https://github.com/celeo/gandalf_bot"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.5"
chrono = "0.4.31"
chrono-tz = "0.8.5"
dotenv = "0.15.0"
log = "0.4.20"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-interactions = "0.15.2"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
