[package]
name = "gandalf_bot"
version = "0.1.0"
edition = "2021"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/gandalf_bot"
repository = "https://github.com/celeo/gandalf_bot"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = "0.4.38"
chrono-tz = "0.9.0"
log = "0.4.22"
mc-query = "1.1.0"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-interactions = "0.15.2"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
