[package]
name = "gandalf_bot"
version = "1.0.0"
edition = "2021"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/gandalf_bot"
repository = "https://github.com/celeo/gandalf_bot"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.40"
chrono-tz = "0.9.0"
log = "0.4.27"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-interactions = "0.15.2"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
